<resources>
    <string name="app_name">PitjarusX</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_desc">Silakan login untuk masuk aplikasi</string>
    <string name="txt_login_failed_email">Login gagal. Email yang digunakan salah/tidak terdaftar. Silakan coba lagi.</string>
    <string name="txt_login_failed_password">Login gagal. Password yang digunakan salah/tidak terdaftar. Silakan coba lagi.</string>
    <string name="txt_login_success">Login berhasil. Silakan login untuk menikmati fitur-fitur JMO.</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_show_password">Show password</string>
    <string name="txt_main_menu">Main Menu</string>
    <string name="txt_profile_name">Mitha Khairunnisa</string>
    <string name="txt_profile_role">Role: {…}</string>
    <string name="txt_profile_nik">NIK: MD00001</string>
    <string name="txt_visiting_month">Kunjungan pada bulan Agustus 2020</string>
    <string name="txt_150">150</string>
    <string name="txt_50_percent">50%</string>
    <string name="txt_total_store">Total Store</string>
    <string name="txt_actual_store">Actual Store</string>
    <string name="txt_percentage">Percentage</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_visiting">Kunjungan</string>
    <string name="txt_target_install_cdfdpc">Target Install CDFDPC</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="txt_transmission_history">Transmission History</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_list_store">List Store</string>
    <string name="txt_search_store">Cari Toko/Distributor</string>
    <string name="txt_visiting_list">List kunjungan 19-08-2020</string>
    <string name="txt_1_m">1m</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>