<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_username"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvLoginDesc"
        app:layout_constraintStart_toStartOf="@id/tvLogin" />

    <com.yumtaufikhidayat.pitjarusx.utils.MaterialCustomEditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_outline_person"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:hint="@string/txt_username_ex"
        android:textSize="14sp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:autofillHints="emailAddress"
        android:nextFocusDown="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_login"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_login_desc"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="@id/tvLogin" />

    <com.yumtaufikhidayat.pitjarusx.utils.MaterialCustomEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_outline_key"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:hint="@string/txt_password"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_700"
        android:text="@string/txt_show_password"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <com.yumtaufikhidayat.pitjarusx.utils.MaterialCustomButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:textAllCaps="false"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        app:cornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/cbShowPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDesc"/>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_700"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>