<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_place"
            app:layout_constraintTop_toTopOf="@id/tvStoreName"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_1_m"
            app:layout_constraintTop_toBottomOf="@id/imgPlace"
            app:layout_constraintStart_toStartOf="@id/imgPlace"
            app:layout_constraintEnd_toEndOf="@id/imgPlace"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgVisited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/baseline_check"
            app:layout_constraintTop_toTopOf="@id/tvStoreName"
            app:layout_constraintEnd_toStartOf="@id/tvVisited"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVisited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/app_name"
            android:textColor="@color/teal_700"
            app:layout_constraintTop_toTopOf="@id/imgVisited"
            app:layout_constraintBottom_toBottomOf="@id/imgVisited"
            app:layout_constraintEnd_toStartOf="@id/imgPlace"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStoreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            tools:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgVisited"/>
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStoreCluster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/hello_blank_fragment"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName"
            app:layout_constraintStart_toStartOf="@id/tvStoreName"
            app:layout_constraintEnd_toEndOf="@id/tvStoreName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStoreInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"
            app:layout_constraintTop_toBottomOf="@id/tvStoreCluster"
            app:layout_constraintStart_toStartOf="@id/tvStoreName"
            app:layout_constraintEnd_toEndOf="@id/tvStoreName"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.cardview.widget.CardView>